{{$NEXT}}

0.16     2011-07-21

- Add Courriel->from(), ->to(), and ->cc() methods.

- Skip another test which may fail on other people's machines, as
  File::LibMagic does not return consistent results on all machines.


0.15     2011-06-28

- Skip a test which may fail on other people's machines, as File::LibMagic
  does not return consistent results on all machines.


0.14     2011-06-25

- An email part with non-text content would still be treated as character data
  rather than binary data, and its Content-Type header would end up with a
  charset of us-ascii. This has been fixed, and now you must explicitly ask
  for a charset in the Content-Type header when creating a
  Courriel::ContentType object. Note that plain and html body parts created
  via Courriel::Builder are unaffected, since these always default to UTF-8 as
  the charset. Reported by ico. RT #69085.

- Added Courriel::ContentType->has_charset() and
  Courriel::ContentType->is_binary() methods.


0.13     2011-06-20

- A multipart email build with Courriel::Builder would have a broken
  Content-Type header, missing the required boundary attribute. Reported by
  ico. RT #68694.

- If you explicitly passed unencoded content when creating a part (which
  happens when using Courriel::Builder), that content would be modified so it
  had CRLF line endings. Now, such content is left untouched. Reported by
  ico. RT #68695.

- When passing encoded content to the Courriel::Part::Single constructor, the
  constructor used to modify the content so it had CRLF line endings. Now it
  is left alone.

- Note that if you're passing raw content to the Single constructor _and_
  setting the transfer encoding to 7bit, 8bit, or binary, then you'll end up
  with a noncomformant email. However, by default all raw content is base64
  encoded. It is strongly recommended that you pass raw content and let
  Courriel take care of the transfer encoding.


0.12     2011-06-07

[BUG FIXES]
